--- a/dev-tools/roles/repos/tasks/main.yml
+++ b/dev-tools/roles/repos/tasks/main.yml
@@ -10,4 +10,15 @@
     - on-dhcp-proxy
     - on-taskgraph
     - on-syslog
+  sudo: yes
+
+- name: Npm install Repos
+  npm: path=/home/vagrant/src/{{ item }}
+  with_items:
+    - on-core
+    - on-http
+    - on-tftp
+    - on-dhcp-proxy
+    - on-taskgraph
+    - on-syslog
   sudo: yes 
