--- a/dev-tools/config/monorail_rack.cfg.example
+++ b/dev-tools/config/monorail_rack.cfg.example
@@ -1,5 +1,7 @@
 # monorail_rack.cfg
 # used to customize default deployment
+# edit $pxe_count to change the amount of headless pxe clients are created when running
+# the monorail_rack setup script.
 
 # deployment variables
 pxe_count=1
