--- a/dev-tools/roles/repos/tasks/main.yml
+++ b/dev-tools/roles/repos/tasks/main.yml
@@ -24,5 +24,5 @@
   sudo: yes 
 
 - name: Make common static directory
-  file: path /home/vagrant/src/on-http/static/http/common state=directory
+  file: path=/home/vagrant/src/on-http/static/http/common state=directory
   sudo: yes
