added git checkout of branch to both add the ability to choose a release and update repos HEAD to current

--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -11,6 +11,20 @@
     chdir: /home/vagrant/src
   sudo: yes
 
+- name: Checkout branch and set HEAD to most current
+  shell: git checkout {{ branch }}
+  args:
+    chdir: /home/vagrant/src/{{ item }}
+  with_items:
+    - on-core
+    - on-http
+    - on-tftp
+    - on-dhcp-proxy
+    - on-taskgraph
+    - on-syslog
+    - on-tasks
+  sudo: yes
+
 - name: Npm install Repos
   npm: path=/home/vagrant/src/{{ item }}
   with_items:
