--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -5,7 +5,7 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-    
+
     # MONORAIL SERVER
     config.vm.define "dev" do |target|
         target.vm.box = "ubuntu/trusty64"
@@ -15,7 +15,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         target.vm.provision "ansible" do |ansible|
             ansible.playbook = "dev.yml"
 
-            # If you wish to use a specific release, include the variable below.
+            # If you wish to use a specific tag, include the variable below.
             # ansible.extra_vars = { branch: "master" }
 
             # if the playbook seems hung try uncommenting below to debug
