--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -15,7 +15,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         target.vm.provision "ansible" do |ansible|
             ansible.playbook = "dev.yml"
 
-            # If you wish to use a specific tag, include the variable below.
+            # If you wish to use a specific commit, include the variable below.
             # ansible.extra_vars = { branch: "master" }
 
             # if the playbook seems hung try uncommenting below to debug
