--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -36,8 +36,13 @@
     - on-taskgraph
     - on-syslog
     - on-tasks
-  sudo: yes 
+  sudo: yes
 
 - name: Make common static directory
   file: path=/home/vagrant/src/on-http/static/http/common state=directory
   sudo: yes
+
+- name: Render API docs for local reference
+  shell: 'npm run apidoc'
+  args:
+    chdir: /home/vagrant/src/on-http
