--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -60,5 +60,5 @@
   get_url: url=https://bintray.com/artifact/download/rackhd/binary/ipxe/{{ item }}
            dest=/home/vagrant/src/on-tftp/static/tftp/{{ item }}
   with_items:
-   - ipxe.ipxe
-   - undionly.ipxe
+   - ipxe.pxe
+   - undionly.kpxe
