--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -46,6 +46,7 @@
   shell: 'npm run apidoc'
   args:
     chdir: /home/vagrant/src/on-http
+  sudo: yes
 
 - name: retrieve microkernel and overlays from bintray
   get_url: url=https://bintray.com/artifact/download/rackhd/binary/builds/{{ item }}
@@ -55,6 +56,7 @@
    - discovery.overlay.cpio.gz
    - initrd.img-3.13.0-32-generic
    - vmlinuz-3.13.0-32-generic
+  sudo: yes
 
 - name: retrieve bootloaders from bintray
   get_url: url=https://bintray.com/artifact/download/rackhd/binary/ipxe/{{ item }}
@@ -64,3 +66,4 @@
    - monorail-efi32-snponly.efi
    - monorail-efi64-snponly.efi
    - undionly.kpxe
+  sudo: yes
