--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -50,6 +50,7 @@
   get_url: url=https://bintray.com/artifact/download/rackhd/binary/builds/{{ item }}
            dest=/home/vagrant/src/on-http/static/http/common/{{ item }}
            validate_certs=no
+           force=yes
   with_items:
    - base.trusty.3.13.0-32-generic.squashfs.img
    - discovery.overlay.cpio.gz
@@ -60,6 +61,7 @@
   get_url: url=https://bintray.com/artifact/download/rackhd/binary/ipxe/{{ item }}
            dest=/home/vagrant/src/on-tftp/static/tftp/{{ item }}
            validate_certs=no
+           force=yes
   with_items:
    - monorail.ipxe
    - monorail-efi32-snponly.efi
