adding coreos install media
Adding ansible tasks to pull down and install CoreOS installation
media (since it's small) to provide an example OS installation flow
with RackHD. Maps to the location and flow from the install-coreos.ipxe
profile (in on-http) and the "Task.Os.Install.CoreOS" workflow task in
on-tasks.

--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -67,3 +67,14 @@
    - monorail-efi32-snponly.efi
    - monorail-efi64-snponly.efi
    - undionly.kpxe
+
+- name: make CoreOS directory for hosting CoreOS demonstration booting
+  file: path=/home/vagrant/src/on-http/static/http/coreos state=directory
+
+- name: retrieve CoreOS kernel and initrd
+  get_url: url=http://stable.release.core-os.net/amd64-usr/current/{{ item }}
+           dest=/home/vagrant/src/on-http/static/http/coreos/{{ item }}
+           force=yes
+  with_items:
+   - coreos_production_pxe.vmlinuz
+   - coreos_production_pxe_image.cpio.gz
