--- a/example/roles/repos/tasks/main.yml
+++ b/example/roles/repos/tasks/main.yml
@@ -74,6 +74,7 @@
 - name: retrieve CoreOS kernel and initrd
   get_url: url=http://stable.release.core-os.net/amd64-usr/current/{{ item }}
            dest=/home/vagrant/src/on-http/static/http/coreos/{{ item }}
+           force=yes
   with_items:
    - coreos_production_pxe.vmlinuz
    - coreos_production_pxe_image.cpio.gz
