removed add but one apt-get update from roles

--- a/example/roles/git/tasks/main.yml
+++ b/example/roles/git/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Git
-  apt: pkg={{ item }} state=installed update-cache=yes
+  apt: pkg={{ item }} state=installed
   with_items:
     - git
   sudo: yes
