--- a/example/roles/ipmitool/tasks/main.yml
+++ b/example/roles/ipmitool/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - name: Install ipmitool
-  apt: pkg=ipmitool state=installed update-cache=yes
+  apt: pkg=ipmitool state=installed
   sudo: yes
