--- a/example/roles/mongodb/tasks/main.yml
+++ b/example/roles/mongodb/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install MongoDB
-  apt: pkg={{ item }} state=installed update-cache=yes
+  apt: pkg={{ item }} state=installed
   with_items:
     - mongodb
   sudo: yes
