--- a/example/roles/isc-dhcp-server/tasks/main.yml
+++ b/example/roles/isc-dhcp-server/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install isc-dhcp-server
-  apt: pkg={{ item }} state=installed update-cache=yes 
+  apt: pkg={{ item }} state=installed
   with_items:
     - isc-dhcp-server
   sudo: yes
@@ -9,9 +9,9 @@
 - name: Copy isc-dhcp-server file to guest
   copy: src=isc-dhcp-server dest=/etc/default/isc-dhcp-server
   sudo: yes
-  
+
 - name: Copy dhcpd.conf file to guest
-  copy: src=dhcpd.conf dest=/etc/dhcp/dhcpd.conf  
+  copy: src=dhcpd.conf dest=/etc/dhcp/dhcpd.conf
   sudo: yes
 
 - name: Start isc-dhcp-server
