--- a/example/roles/rabbitmq/tasks/main.yml
+++ b/example/roles/rabbitmq/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install RabbitMQ
-  apt: pkg={{ item }} state=installed update-cache=yes
+  apt: pkg={{ item }} state=installed
   with_items:
     - rabbitmq-server
   sudo: yes
