--- a/example/roles/snmptool/tasks/main.yml
+++ b/example/roles/snmptool/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Build Tools
-  apt: pkg={{ item }} state=installed update-cache=yes
+  apt: pkg={{ item }} state=installed
   with_items:
     - snmp
   sudo: yes
