npm from ansible, refactored providers, explicit version

--- a/example/roles/remoterepos/tasks/main.yml
+++ b/example/roles/remoterepos/tasks/main.yml
@@ -5,10 +5,15 @@
        accept_hostkey=true
        version="{{ branch | default('master') }}"
 
-- name: Link and install locally
-  shell: './src/scripts/link_install_locally.bash'
-  args:
-    chdir: /home/vagrant
+- name: Npm install Repos
+  npm: path="/home/vagrant/src/{{ item }}"
+       production=yes
+  with_items:
+    - on-syslog
+    - on-tftp
+    - on-dhcp-proxy
+    - on-taskgraph
+    - on-http
 
 - name: Make common static directory
   file: path=/home/vagrant/src/on-http/static/http/common state=directory
