--- a/packer/rackhd_local.yml
+++ b/packer/rackhd_local.yml
@@ -16,3 +16,8 @@
     - foreman
     - remoterepos
     - overlays
+  vars:
+# branch of https://github.com/rackhd/rackhd to be used
+    - branch: "master"
+# version of Node.js to use
+    - node_version: "0.10.40"
