renaming role from overlays to images

--- a/packer/rackhd_local.yml
+++ b/packer/rackhd_local.yml
@@ -15,7 +15,7 @@
     - ipmitool
     - foreman
     - remoterepos
-    - overlays
+    - images
   vars:
 # branch of https://github.com/rackhd/rackhd to be used
     - branch: "master"
