--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -8,23 +8,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # MONORAIL SERVER
     config.vm.define "dev" do |target|
-        target.vm.box = "ubuntu/trusty64"
-        target.vm.box_url = "https://atlas.hashicorp.com/ubuntu/boxes/trusty64/versions/14.04/providers/virtualbox.box"
-        target.vm.synced_folder "../", "/home/vagrant/src"
-
-        target.vm.provision "ansible" do |ansible|
-            ansible.playbook = "dev.yml"
-
-            # If you wish to use a specific branch, enable the variable below
-            # and the repos role will check out code on that branch across
-            # the RackHD git repositories.
-            # ansible.extra_vars = { branch: "master", node_version: '0.10.40' }
-
-            # if the playbook seems hung try uncommenting below to enable
-            # debuging level output
-            # ansible.verbose = "vvv"
-        end
-
+        target.vm.box = "heckj/rackhd"
         target.vm.provider "virtualbox" do |v|
             v.memory = 4096
             v.cpus = 4
