moving curl to debseed portion of setup

--- a/packer/http/preseed.cfg
+++ b/packer/http/preseed.cfg
@@ -38,7 +38,7 @@ d-i user-setup/allow-password-weak boolean true
 d-i time/zone string UTC
 
 # Minimum packages (see postinstall.sh)
-d-i pkgsel/include string openssh-server
+d-i pkgsel/include string curl openssh-server sudo
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select none
