--- a/packer/ansible/roles/repos/tasks/main.yml
+++ b/packer/ansible/roles/repos/tasks/main.yml
@@ -31,7 +31,7 @@
   args:
     chdir: /home/vagrant
 
-- shell: echo 'df -h'
+- shell: df -h
   register: df_echo
 - debug: msg="{{df_echo.stdout}}"
 
@@ -53,6 +53,6 @@
   args:
     chdir: /home/vagrant/src/on-http
 
-- shell: echo 'df -h'
+- shell: df -h
   register: df_echo
 - debug: msg="{{df_echo.stdout}}"
