starting DHCP on vagrant provision after eth1 exists

--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -27,5 +27,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         # Default value: false
         target.ssh.forward_agent = true
 
+        target.vm.provision "shell", inline: <<-SHELL
+          service isc-dhcp-server start
+        SHELL
+
     end
 end
