--- a/packer/http/preseed.cfg
+++ b/packer/http/preseed.cfg
@@ -1,7 +1,4 @@
-### Network configuration
-d-i netcfg/choose_interface select eth0
-d-i netcfg/get_hostname string ubuntu
-
+debconf debconf/frontend select Noninteractive
 choose-mirror-bin mirror/http/proxy string
 d-i base-installer/kernel/override-image string linux-server
 d-i clock-setup/utc boolean true
@@ -9,9 +6,9 @@ d-i clock-setup/utc-auto boolean true
 d-i finish-install/reboot_in_progress note
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i partman-auto/guided_size string max
-#d-i partman-auto/choose_recipe select atomic
-d-i partman-auto/method string regular
+d-i partman-auto-lvm/guided_size string max
+d-i partman-auto/choose_recipe select atomic
+d-i partman-auto/method string lvm
 d-i partman-lvm/confirm boolean true
 d-i partman-lvm/confirm_nooverwrite boolean true
 d-i partman-lvm/device_remove_lvm boolean true
@@ -19,28 +16,21 @@ d-i partman/choose_partition select finish
 d-i partman/confirm boolean true
 d-i partman/confirm_nooverwrite boolean true
 d-i partman/confirm_write_new_label boolean true
-d-i partman-basicfilesystems/no_swap boolean false
-d-i partman-auto/expert_recipe string myroot :: 1000 50 -l ext4 \
-     $primary{ } $bootable{ } method{ format } \
-     format{ } use_filesystem{ } filesystem{ ext4 } \
-     mountpoint{ / } \
-    .
-d-i partman-auto/choose_recipe select myroot
 
 # Default user
 d-i passwd/user-fullname string vagrant
 d-i passwd/username string vagrant
 d-i passwd/user-password password vagrant
 d-i passwd/user-password-again password vagrant
-d-i user-setup/encrypt-home boolean false
-d-i user-setup/allow-password-weak boolean true
-
-d-i time/zone string UTC
+d-i passwd/username string vagrant
 
 # Minimum packages (see postinstall.sh)
-d-i pkgsel/include string curl openssh-server sudo
+d-i pkgsel/include string openssh-server
 d-i pkgsel/install-language-support boolean false
 d-i pkgsel/update-policy select none
 d-i pkgsel/upgrade select none
 
-tasksel tasksel/first multiselect standard, ubuntu-server
+d-i time/zone string UTC
+d-i user-setup/allow-password-weak boolean true
+d-i user-setup/encrypt-home boolean false
+tasksel tasksel/first multiselect standard, server
