--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@ example/bin/pxe*
 *.vdi
 *.box
 packer_cache
+
+# # python giblets
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Environment / Unit test / coverage reports
+.tox
+.venv
+.passwdc
