--- a/docker/logstash/config/logstash.conf
+++ b/docker/logstash/config/logstash.conf
@@ -1,10 +1,21 @@
 input {
-	tcp {
-		port => 5000
+	rabbitmq {
+		host => "172.31.128.1"
+		exchange => "on.logging"
+		key => "#"
 	}
+
+	# statsd {}
 }
 
-## Add your filters here
+# filter {
+  # grok {
+  #   match => { "message" => "%{COMBINEDAPACHELOG}" }
+  # }
+  # date {
+  #   match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+  # }
+# }
 
 output {
 	elasticsearch {
