--- a/docker/docker.env
+++ b/docker/docker.env
@@ -1,4 +1,4 @@
-amqp=amqp://rabbitmq
+amqp=amqp://172.31.128.1
 apiServerAddress=172.31.128.1
 apiServerPort=80
 broadcastaddr=172.31.131.255
@@ -23,7 +23,7 @@ httpFileServiceType=FileSystem
 # httpStaticRoot=/opt/monorail/static/http
 migrate=safe
 minLogLevel=2
-mongo=mongodb://mongo/rackdh
+mongo=mongodb://172.31.128.1/rackdh
 sharedKey=qxfO2D3tIJsZACu7UA6Fbw0avowo8r79ALzn+WeuC8M=
 statsd=127.0.0.1:8125
 subnetmask=255.255.252.0
