adding on-tools repo to rackhd
adding submodule after resetting repository to reflect ancilliary
tools for RackHD project. Partial resolution for
https://github.com/RackHD/RackHD/issues/33

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "on-imagebuilder"]
 	path = on-imagebuilder
 	url = https://github.com/RackHD/on-imagebuilder.git
+[submodule "on-tools"]
+	path = on-tools
+	url = https://github.com/RackHD/on-tools
