--- a/example/config/monorail_rack.cfg.example
+++ b/example/config/monorail_rack.cfg.example
@@ -1,7 +1,18 @@
 # monorail_rack.cfg
 # used to customize default deployment
-# edit $pxe_count to change the amount of virtualbox PXE-booting clients are created when running
 # the monorail_rack setup script.
-
 # deployment variables
-pxe_count=1
+
+# Number of virtualbox PXE-booting clients to be created while running.
+PXE_COUNT=1
+
+# Host interface to bridge guest network on, useful for exposing external nodes 
+# to the running instance (optional, defaults to internal network).
+# BRIDGE_INTF=eth1
+
+# Select workspace to sync with vagrant instance (optional, defaults to pre-installed repos).
+# WORKSPACE=~/
+
+# Select single repo to be synchronized with the vagrant instance (optional, requires WORKSPACE to be set).
+# REPO=on-http
+
